wxc/include/ewxw/wxc_glue.h



/* wxDirDialog */
TClassDefExtend(wxDirDialog,wxDialog)
TClass(wxDirDialog) wxDirDialog_Create( TClass(wxWindow) _prt, TStringVoid _msg, TStringVoid _dir, TPoint(_lft,_top), int _stl );

TStringLen wxDirDialog_GetMessage( TSelf(wxDirDialog) _obj, TStringOutVoid _buf );

TStringLen wxDirDialog_GetPath( TSelf(wxDirDialog) _obj, TStringOutVoid _buf );

int        wxDirDialog_GetStyle( TSelf(wxDirDialog) _obj );

void       wxDirDialog_SetMessage( TSelf(wxDirDialog) _obj, TStringVoid msg );

void       wxDirDialog_SetPath( TSelf(wxDirDialog) _obj, TStringVoid pth );

void       wxDirDialog_SetStyle( TSelf(wxDirDialog) _obj, int style );